# myOS

./: Makefile  README.md  VERSION  meson.build  meson.options
apps/: init.c  meson.build  sh.c  syscalls.S  ulib.c  user.h
board/: meson.build
board/bpi-f3/: board.c  boot.c  boot.ld  cache.c  meson.build  mm_init.c  start.S
board/bpi-f3/include/: board.h  board_memmap.h  k1-x-pinctrl.h
board/qemu/: board_qemu.c  boot.c  boot_qemu.ld  meson.build  start.S
board/qemu/include/: board.h  sifiveu_spi.h
board/vf2/: board.c  boot.c  boot.ld  cache.c  meson.build  mm_init.c  start.S
board/vf2/include/: board.h  jh7110_memmap.h
boot/: boot.c  boot.ld  meson.build  mm_init.c  mmu.c  printf.c  sbi.c  start.S  uart.c
drivers/: console.c  disk.c  dw_mmc.c  dwmmc.h  ext4.c  fs.c  meson.build  mmc.c  mmc_dev.c  pinctrl.c  riscv_timer.c  sd.c  sdhci.c  spacemit_sdhci.c  spi.c  uart.c  uart_sifive.c  video.c
include/: bmp.h  common.h  config.h.in  div64.h  dwmmc.h  elf.h  ext4.h  jh7110_memmap.h  kmem.h  list.h  meson.build  mmc.h  mmu.h  part.h  queue.h  rv_mmu.h  sbi_ecall_interface.h  sched.h  sdhci.h  spi.h  spinlock.h  stdint.h  string.h  syscall.h  trap.h  wait_bit.h
include/asm/: asm.h  fls.h
include/linux/: errno.h
include/sys/: riscv.h  types.h
kernel/: console.c  exec.c  init.c  inittask.c  kernelvec.S  mem.c  meson.build  mmu.c  pgman.c  plic.c  sbi.c  sched.c  spinlock.c  switch.S  syscall.c  trampoline.S  trap.c
kernel/mem/: mem.c  mem_kstack.c  meson.build  mmu.c  pgman.c
lib/: memmove.S  memset.S  meson.build  printf.c  sq_remfirst.c  string.c
